<resources>
    <string name="app_name">Test</string>
    <string name="login">로그인</string>
    <string name="forgetPass">비밀번호 찾기</string>
    <string name="dontHaveAccount">계정이 없으신가요? <u>가입하기</u></string>
    <string name="password">비밀번호</string>
    <string name="email">Email</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="enterEmailTest">Please enter the email associate to your account.</string>
    <string name="submitEmail">Submit Email</string>
    <string name="codeSentEmail">A code has been sent to your email</string>
    <string name="codeOnEmail">A code has been sent to</string>
    <string name="enterCodeBelow">Please enter the code below.</string>
    <string name="resendCode">Resend code again</string>
    <string name="verify">Verify</string>
    <string name="enterNewPassword">Enter New Password</string>
    <string name="newPassword">New Password</string>
    <string name="setNewPassword">Set New Password</string>
</resources>