<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@mipmap/icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/email"
            android:textColor="@color/textLight"
            android:textSize="@dimen/_10ssp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableLeft="@mipmap/email"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableTint="@color/textLight"
            android:hint="sabahat@gmail.com"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/password"
            android:textColor="@color/textLight"
            android:textSize="@dimen/_10ssp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableLeft="@mipmap/lock"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableTint="@color/textLight"
            android:hint="**********"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tvForgetPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:text="@string/forgetPass"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/button_background"
            android:text="@string/login"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:text="@string/dontHaveAccount" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>