<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPassActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@mipmap/icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/forgotPassword"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/enterEmailTest"
            android:textColor="@color/textLight"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_60sdp"
            android:text="@string/email"
            android:textColor="@color/textLight"
            android:textSize="@dimen/_10ssp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableLeft="@mipmap/email"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableTint="@color/textLight"
            android:hint="sabahat@gmail.com"
            android:inputType="textEmailAddress" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmitEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_80sdp"
            android:background="@drawable/button_background"
            android:text="@string/submitEmail"
            android:textAllCaps="false"
            android:textColor="@color/white" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>