<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtpActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@mipmap/icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/codeSentEmail"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:gravity="center"
                android:text="@string/codeOnEmail"
                android:textColor="@color/textLight"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:gravity="center"
                android:text="test@luxpmsoft.com"
                android:textColor="@color/textLight"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/enterCodeBelow"
            android:textColor="@color/textLight"
            android:textSize="@dimen/_12ssp" />

        <in.aabhasjindal.otptextview.OtpTextView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_40sdp"
            android:textColor="@color/textLight"
            app:bar_enabled="true"
            app:bar_height="2dp"
            app:height="40dp"
            app:length="8"
            app:otp="12345678"
            app:width="40dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/resendCode"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnVerify"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_80sdp"
            android:background="@drawable/button_background"
            android:text="@string/verify"
            android:textAllCaps="false"
            android:textColor="@color/white" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>